--- a/example/index.html
+++ b/example/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <script src="https://unpkg.com/react@15.3.2/dist/react.min.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.min.js"></script>
-    <link rel="stylesheet" href="./style.css" />
+    <!--link rel="stylesheet" href="./style.css" /-->
     <title>react-find-while-scrolling</title>
 </head>
 
-<body>
+<body style="min-height: 1000px;">
     <header class="sans-serif">
         <div class="cover bg-left bg-center-l" style="background-image: url(https://drscdn.500px.org/photo/155909731/q%3D80_m%3D2000/9a2f14c51c8da8629c68c6b502b540c7)">
             <div class="bg-black-80 pb5 pb6-m">
@@ -21,7 +21,7 @@
                 </nav>
                 <div class="tc-l mt4 mt5-m mt6-l ph3">
                     <h1 class="f2 f1-l fw2 white-90 mb0 lh-title">react-find-while-scrolling</h1>
-                    <h2 class="fw1 f3 white-80 mt3 mb4">React video container with videojs libaray.</h2>
+                    <h2 class="fw1 f3 white-80 mt3 mb4">React component to detect if the element is in the viewport while scrolling.</h2>
                     <a class="f6 no-underline grow dib v-mid bg-blue white ba b--blue ph3 pv2 mb3" href="https://github.com/sylvesteraswin/react-find-while-scrolling">View in Github</a>
                 </div>
             </div>
